fix 1.线程问题